# sign-in-with-apple

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: data.rs  error.rs  lib.rs
