[package]
name = "sign-in-with-apple"
version = "0.1.2"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
description = "Sign In With Apple Validation in Async Rust"
edition = "2018"
homepage = "https://github.com/gameroasters/sign-in-with-apple"
repository = "https://github.com/gameroasters/sign-in-with-apple"
readme = "README.md"
license = "MIT"
categories = ["web-programming","asynchronous"]
keywords = [
    "apple",
    "mobile",
    "jwt",
    "signin",
    "validation",
]

[dependencies]
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["http1"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["rt-multi-thread","net","macros"] }
thiserror = "1.0"